refactor: remove direct index access from collections